# troopy_bevy

./: Cargo.toml
src/: main.rs
src/game/: mod.rs
src/game/core/: mod.rs
src/game/core/interaction/: actions.rs  mod.rs  ui.rs
src/game/core/state/: player.rs
src/game/core/structures/: structure.rs
src/game/core/troops/: mod.rs  troop.rs
src/game/networking/: client.rs  messages.rs  mod.rs  protocol.rs  server.rs  shared.rs
src/game/networking/client/: game_client.rs  mod.rs
src/game/networking/server/: game_server.rs  mod.rs
src/game/networking/shared/: messages.rs  mod.rs  protocol.rs  shared.rs
